--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="whiteBackground">#D3D3D3</color>
     <color name="whiteButton">#F9F9F9</color>
+    <color name="blue">#FF3385E5</color>
+    <color name="darkGreen">#FF669900</color>
 </resources>
