--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,18 +15,21 @@
         android:layout_marginTop="3pt">
         <Button
             android:id="@+id/button1"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
             android:background="@color/whiteButton"/>
         <Button
             android:id="@+id/button2"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
             android:background="@color/whiteButton"/>
         <Button
             android:id="@+id/button3"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
@@ -39,18 +42,21 @@
         android:layout_marginTop="3pt">
         <Button
             android:id="@+id/button4"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
             android:background="@color/whiteButton"/>
         <Button
             android:id="@+id/button5"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
             android:background="@color/whiteButton"/>
         <Button
             android:id="@+id/button6"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
@@ -63,18 +69,21 @@
         android:layout_marginTop="3pt">
         <Button
             android:id="@+id/button7"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
             android:background="@color/whiteButton"/>
         <Button
             android:id="@+id/button8"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
             android:background="@color/whiteButton"/>
         <Button
             android:id="@+id/button9"
+            android:onClick="btnClick"
             android:layout_width="40pt"
             android:layout_height="40pt"
             android:layout_marginLeft="3pt"
